# car_repair_management

./: .gitignore  FIXES_SUMMARY.md  README.md  RO_STATUS_DESIGN.md  license.txt  pyproject.toml
car_repair_management/: hooks.py  install.py  modules.txt  patches.txt  tasks.py
car_repair_management/car_repair_management/car_repair_management_dashboard/repair_dashboard/: repair_dashboard.json
car_repair_management/car_repair_management/dashboard_chart/billable_vs_foc_parts_(30d)/: billable_vs_foc_parts_(30d).json
car_repair_management/car_repair_management/dashboard_chart/most_repaired_vehicles/: most_repaired_vehicles.json
car_repair_management/car_repair_management/dashboard_chart/oldest_items/: oldest_items.json
car_repair_management/car_repair_management/dashboard_chart/ros_by_status_(30d)/: ros_by_status_(30d).json
car_repair_management/car_repair_management/dashboard_chart/top_suppliers/: top_suppliers.json
car_repair_management/car_repair_management/doctype/customer_update/: customer_update.json  customer_update.py
car_repair_management/car_repair_management/doctype/handover_checklist_item/: handover_checklist_item.js  (+3 more)
car_repair_management/config/: desktop.py
car_repair_management/fixtures/: custom_field.json  dashboard_chart.json  module_onboarding.json  number_card.json  report.json  workspace.json
car_repair_management/overrides/: __init__.py  vehicle_dashboard.py
car_repair_management/public/js/: quotation.js  repair_order.js  sales_order.js  service_template.js  task.js  vehicle.js
car_repair_management/tests/: test_repair_order.py
(+86 files in other folders)
